# obfuls

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: nuitka.ipynb  pyarmor.ipynb  pyinstaller.ipynb  sourcedefender.ipynb
notebooks/.ipynb_checkpoints/: pyarmor-checkpoint.ipynb  sourcedefender-checkpoint.ipynb
obfuls2/: obfu_primes.py  render.py
