[tool.poetry]
name = "obfuls2"
version = "0.1.0"
description = ""
authors = ["eliaslm <elias.loonamy@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.3"
nuitka = "^2.4.10"
pyinstaller = "6.8.0"
pyarmor = "7.4.3"
sourcedefender = "^14.1.1"
jupyterlab = "^4.2.5"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
